Added body code of StudentFeedback.fxml

--- a/src/main/resources/fxml/StudentFeedback.fxml
+++ b/src/main/resources/fxml/StudentFeedback.fxml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="CONTROLLER_NAME"
-            prefHeight="400.0" prefWidth="600.0">
+<VBox xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.university.ui.StudentFeedbackController"
+      spacing="20" styleClass="dashboard-content">
 
-</AnchorPane>
+    <padding>
+        <Insets top="20" right="20" bottom="20" left="20"/>
+    </padding>
+
+    <Label text="Advisor Feedback" styleClass="section-title"/>
+
+    <ScrollPane fitToWidth="true" prefHeight="400">
+        <VBox fx:id="feedbackContainer" spacing="15">
+            <!-- Feedback items will be added here dynamically -->
+        </VBox>
+    </ScrollPane>
+
+    <HBox spacing="10" alignment="CENTER_LEFT">
+        <Button text="Refresh" onAction="#refreshFeedback" styleClass="primary-button"/>
+    </HBox>
+
+</VBox>
